--- a/source/sass/blocks/modal.scss
+++ b/source/sass/blocks/modal.scss
@@ -6,9 +6,11 @@
 
   background-color: $white;
 
-  box-shadow: 0 9px 25px 5px #e2e2e2;
+  box-shadow: 0 6px 17px 4px $darkgray;
 
   @include tablet() {
+    top: 9%;
+
     width: 460px;
     margin: 0 auto;
   }
@@ -23,8 +25,9 @@
   padding-top: 40px;
   padding-bottom: 11px;
 
+
   @include desktop() {
-    background-image: linear-gradient(to bottom, #ffffff 60%, #f2f2f2 60%);
+    background-image: linear-gradient(to bottom, $white 60%, $gray 60%);
   }
 }
 
@@ -33,7 +36,7 @@
   padding-top: 14px;
   padding-bottom: 12px;
 
-  background-image: linear-gradient(to bottom, #ffffff 54%, #f2f2f2 54%);
+  background-image: linear-gradient(to bottom, $white 60%, $gray 60%);
 }
 
 .modal__wrapper {
@@ -63,6 +66,14 @@
   font-weight: 700;
   color: $modal-title-color;
   text-align: center;
+
+  @include tablet() {
+    margin-bottom: 21px;
+    padding: 0 30px;
+
+    font-size: 30px;
+    line-height: 40px;
+  }
 }
 
 .modal__description {
@@ -72,6 +83,11 @@
   text-align: center;
 
   &--show {
-    margin-bottom: 80px;
+    margin-bottom: 82px;
+  }
+
+  @include tablet() {
+    font-size: 18px;
+    line-height: 24px;
   }
 }
