Приводит модификатор inner блока intro в соответствие с PP для десктопной версии страницы Конкурс

--- a/source/sass/blocks/intro.scss
+++ b/source/sass/blocks/intro.scss
@@ -21,6 +21,11 @@
       padding-top: 69px;
       padding-bottom: 81px;
     }
+
+    @include desktop() {
+      padding-top: 67px;
+      padding-bottom: 101px;
+    }
   }
 }
 
