Приводит элементы блока footer в соответствие с PP для десктопной версии страницы Конкурс

--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -54,4 +54,9 @@
   @include tablet() {
     padding-top: 7px;
   }
+
+  @include desktop() {
+    padding-top: 0;
+    padding-bottom: 6px;
+  }
 }
