Приводит элементы блока button в соответствии с PP для десктопной версии страницы Конкурс

--- a/source/sass/blocks/button.scss
+++ b/source/sass/blocks/button.scss
@@ -25,7 +25,7 @@
     background-color: $button-action-background-color;
   }
 
-  &--disabled {
+  &:disabled {
     background-color: $button-disables-background-color;
   }
 
