Приводит элементы блоков intro, photo-content, post в соответствие с PP для десктопной версии страницы Фотографии

--- a/source/sass/blocks/intro.scss
+++ b/source/sass/blocks/intro.scss
@@ -46,10 +46,14 @@
     line-height: 59px;
   }
 
-  &--width {
+  &--competition {
     @include desktop() {
       width: 754px;
     }
+  }
+
+  &--photo {
+    margin-bottom: 30px;
   }
 }
 
