--- a/source/sass/blocks/post.scss
+++ b/source/sass/blocks/post.scss
@@ -49,7 +49,7 @@
   flex-basis: 100%;
   margin: 0;
   margin-bottom: 20 px;
-  padding: 20px 18px 0 18px;
+  padding: 18px;
 
   &--panorama {
     background-color: $post-background-color;
@@ -79,7 +79,7 @@
 
 .post__comment {
   margin: 0;
-  margin-bottom: 15px;
+  margin-bottom: 9px;
 
   @include tablet() {
     order: 3;
@@ -89,15 +89,22 @@
 .post__like {
   margin: 0;
   margin-top: auto;
-  padding-left: 32px;
-
-  font-size: 12px;
-  color: $post-like-text-color;
-  text-transform: uppercase;
 
   @include tablet() {
     order: 2;
     padding-left: 0;
     padding-right: 30px;
   }
+}
+
+.post__icon {
+  margin-right: 14px;
+
+  fill: $pink;
+}
+
+.post__like-text {
+  font-size: 12px;
+  color: $post-like-text-color;
+  text-transform: uppercase;
 }
