--- a/source/sass/config/variables.scss
+++ b/source/sass/config/variables.scss
@@ -58,6 +58,8 @@ $post-background-color: $gray;
 $post-like-text-color: $pink;
 
 $photo-editor-background-color: $gray;
+$photo-editor-icon-color: $blue;
+$photo-editor-icon-active-color: $pink;
 
 $submit-text-color: $pink;
 $submit-decor-color: $pink;
