--- a/source/sass/blocks/buttons.scss
+++ b/source/sass/blocks/buttons.scss
@@ -7,12 +7,13 @@
 
 .buttons__item {
   width: 280px;
-  padding: 16px 20px;
+  padding: 15px 20px;
 
   font-size: 18px;
   font-weight: 700;
   line-height: 18px;
   text-align: center;
+  letter-spacing: 0.9px;
 
   background-color: transparent;
   border-radius: 35px;
