Перестраивает модификаторы и элементы блока post, page, form для планшетной версии страницы Фотографии

--- a/source/sass/blocks/page.scss
+++ b/source/sass/blocks/page.scss
@@ -11,7 +11,11 @@
 }
 
 .page__footer {
-  padding-top: 55px;
+  padding: 42px 0;
+
+  &--competition {
+    padding-top: 52px;
+  }
 
   @include tablet() {
     padding-top: 12px;
