--- a/source/sass/blocks/scale.scss
+++ b/source/sass/blocks/scale.scss
@@ -15,6 +15,10 @@
 
   &--hidden {
     display: none;
+
+    @include tablet() {
+      display: block;
+    }
   }
 
   @include tablet() {
@@ -29,11 +33,21 @@
 .scale__toggle {
   position: absolute;
   top: -7px;
-  right: 14%;
-
   width: 11px;
   height: 11px;
   background-color: $white;
   border: 2px solid $pink;
   border-radius: 50%;
+
+  &--crop {
+    right: 14%;
+  }
+
+  &--fill {
+    right: 80%;
+  }
+
+  &--contrast {
+    right: 50%;
+  }
 }
