Добавляет ссылки на приложение в разных маркетах

--- a/source/sass/blocks/menu-list.scss
+++ b/source/sass/blocks/menu-list.scss
@@ -46,7 +46,7 @@
     text-transform: none;
     letter-spacing: 0.1px;
 
-    // вложенность больше трех, как можно реализовать иначе?
+    // вложенность больше двух, как можно реализовать иначе?
 
     &--active {
       position: relative;
