Корректирует отображение блоков main, footer, page для планшетной и десктопной версий

--- a/source/sass/blocks/main.scss
+++ b/source/sass/blocks/main.scss
@@ -25,3 +25,15 @@
     padding-top: 67px;
   }
 }
+
+.main__competition {
+  margin-bottom: 13px;
+
+  @include tablet() {
+    margin-bottom: 50px;
+  }
+
+  @include desktop() {
+    margin-bottom: 0;
+  }
+}
