--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -12,16 +12,17 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  align-items: flex-start;
-  // min-height: 203px;
+  align-items: center;
 
   @include tablet() {
+    align-items: flex-start;
     flex-direction: row;
   }
 }
 
 .footer__logo-link {
   display: block;
+  margin-bottom: 32px;
 
   @include tablet() {
     margin-right: 68px;
@@ -40,8 +41,11 @@
 
   @include list;
 
+  margin-bottom: 38px;
+
   @include tablet() {
     margin-right: auto;
+    margin-bottom: 0;
   }
 }
 
