--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -8,6 +8,7 @@
 // blocks header
 @import "blocks/page.scss";
 @import "blocks/header.scss";
+@import "blocks/hamburger-menu.scss";
 @import "blocks/main-nav.scss";
 @import "blocks/menu-list.scss";
 
