--- a/source/sass/config/variables.scss
+++ b/source/sass/config/variables.scss
@@ -28,6 +28,7 @@ $header-icon-color: $white;
 $header-icon-action-color: $pink;
 
 $logo-header-color: $white;
+$logo-header-action-color: $pink;
 
 $nav-background-color: $blue;
 
@@ -92,6 +93,10 @@ $button-action-background-color: $darkgreen;
 $button-disables-background-color: $darkgray;
 
 // variables for applying colors footer
+$logo-footer-color: $blue;
+$logo-footer-action-color: $pink;
+
+
 $social-icon-fill: $pink;
 $social-border-color: $blue;
 
