Добавляет ретиновое изображения блока header для мобильной версии

--- a/source/sass/blocks/hamburger-menu.scss
+++ b/source/sass/blocks/hamburger-menu.scss
@@ -65,7 +65,7 @@
 }
 
 .hamburger-menu--opened.header {
-  background-position: 0 259px;
+  background-position: center 259px;
 }
 
 .hamburger-menu--opened .main-nav__wrapper {
