--- a/source/sass/blocks/information.scss
+++ b/source/sass/blocks/information.scss
@@ -11,28 +11,28 @@
     background-image: linear-gradient(-6deg, $gray 59%, $white 0%);
   }
 
-  &::after {
-    content: "";
+  // &::after {
+  //   content: "";
 
-    display: block;
-    height: 288px;
+  //   display: block;
+  //   height: 288px;
 
-    background-image: url("../img/iphone-screen-mobile@1x.png");
-    background-position: 50% 10px;
-    background-repeat: no-repeat;
+  //   background-image: url("../img/iphone-screen-mobile@1x.png");
+  //   background-position: 50% 10px;
+  //   background-repeat: no-repeat;
 
-    @include tablet() {
-      position: absolute;
-      bottom: 394px;
-      left: 19px;
+  //   @include tablet() {
+  //     position: absolute;
+  //     bottom: 394px;
+  //     left: 19px;
 
-      width: 160px;
-    }
+  //     width: 160px;
+  //   }
 
-    @include desktop() {
-      display: none;
-    }
-  }
+  //   @include desktop() {
+  //     display: none;
+  //   }
+  // }
 }
 
 .information__header {
@@ -74,8 +74,20 @@
 }
 
 .information__list {
+  min-height: 706px;
+
   @include list;
   padding-top: 80px;
+
+  background-color: $gray;
+  background-image: url("../img/iphone-screen-mobile@1x.png");
+  background-position: center 507px;
+  background-repeat: no-repeat;
+
+  @include retina() {
+    background-image: url("../img/iphone-screen-mobile@2x.png");
+    background-size: 157px auto;
+  }
 
   @include tablet() {
     position: relative;
