Корректирует hamburger-menu

--- a/source/sass/blocks/hamburger-menu.scss
+++ b/source/sass/blocks/hamburger-menu.scss
@@ -80,6 +80,10 @@
   }
 }
 
+.hamburger-menu--nojs.header {
+  background-position: center 259px;
+}
+
 .hamburger-menu--nojs .main-nav__wrapper {
   @include laptop-max() {
     background-color: $nav-background-color;
