--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -1,7 +1,7 @@
 .header {
   background-color: #1d2631;
   background-image: url("../img/bg-back-mobile@1x.jpg");
-  background-position: center 0;
+  background-position: center top;
   background-repeat: no-repeat;
 
   @include retina() {
@@ -9,10 +9,14 @@
     background-size: 700px auto;
   }
 
-  // @include tablet() {
-  //   background-image: url("../img/bg-back-mobile@2x.jpg");
-  //   background-size: 660px auto;
-  // }
+  @include tablet() {
+    background-image: url("../img/bg-back-tablet@1x.jpg");
+
+    @include retina() {
+      background-image: url("../img/bg-back-tablet@2x.jpg");
+      background-size: 1200px auto;
+    }
+  }
 }
 
 .header__wrapper {
