--- a/source/sass/config/variables.scss
+++ b/source/sass/config/variables.scss
@@ -44,6 +44,8 @@ $link-decor-color: $white;
 $link-text-action-color: $pink;
 $link-background-action-color: $white;
 
+$effect-background-color: $white;
+
 $slider-bullet-color: $blue;
 
 $tariff-selection-background-color: $white;
