--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -17,6 +17,16 @@
       background-size: 1200px auto;
     }
   }
+
+  @include desktop() {
+    background-image: url("../img/bg-back-desktop@1x.jpg");
+
+    @include retina() {
+      background-image: url("../img/bg-back-desktop@2x.jpg");
+      background-position: center 11px;
+      background-size: 2560px auto;
+    }
+  }
 }
 
 .header__wrapper {
