Добавляет адаптивную и ретиновую графику блока intro для десктопной версии

--- a/source/sass/blocks/intro.scss
+++ b/source/sass/blocks/intro.scss
@@ -3,24 +3,34 @@
   padding-right: 20px;
   padding-left: 20px;
 
-  background-image: url("../../img/iphone-hand-mobile@1x.png");
+  background-image: url("../img/iphone-hand-mobile@1x.png");
   background-position: 0 106px;
   background-repeat: no-repeat;
 
   @include retina() {
-    background-image: url("../../img/iphone-hand-mobile@2x.png");
+    background-image: url("../img/iphone-hand-mobile@2x.png");
     background-size: 258px auto;
   }
 
   @include tablet() {
     padding-top: 91px;
 
-    background-image: url("../../img/iphone-hand-tablet@1x.png");
+    background-image: url("../img/iphone-hand-tablet@1x.png");
     background-position: -20px 72px;
 
     @include retina() {
-      background-image: url("../../img/iphone-hand-tablet@2x.png");
+      background-image: url("../img/iphone-hand-tablet@2x.png");
       background-size: 700px auto;
+    }
+  }
+
+  @include desktop() {
+    background-image: url("../img/iphone-hand-desktop@1x.png");
+    background-position: 16px 101px;
+
+    @include retina() {
+      background-image: url("../img/iphone-hand-desktop@2x.png");
+      background-size: 1050px auto;
     }
   }
 
