--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -19,6 +19,7 @@
 @import "blocks/store-list.scss";
 @import "blocks/link.scss";
 @import "blocks/information.scss";
+@import "blocks/standart.scss";
 @import "blocks/effect.scss";
 @import "blocks/reviews.scss";
 @import "blocks/price.scss";
