--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -20,6 +20,7 @@
 @import "blocks/link.scss";
 @import "blocks/information.scss";
 @import "blocks/standart.scss";
+@import "blocks/filter.scss";
 @import "blocks/effect.scss";
 @import "blocks/reviews.scss";
 @import "blocks/price.scss";
