--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -21,6 +21,7 @@
 @import "blocks/information.scss";
 @import "blocks/standart.scss";
 @import "blocks/filter.scss";
+@import "blocks/smile.scss";
 @import "blocks/effect.scss";
 @import "blocks/reviews.scss";
 @import "blocks/price.scss";
