--- a/source/sass/blocks/price.scss
+++ b/source/sass/blocks/price.scss
@@ -4,6 +4,10 @@
   @include tablet() {
     background-image: linear-gradient(-4deg, $gray 86%, $white 0%);
   }
+
+  @include desktop() {
+    background-image: linear-gradient(-4deg, $gray 82%, $white 0%);
+  }
 }
 
 .price__toggles {
