Приводит блоки footer, hamburger-menu, header на десктопной версии в соответствие с PP

--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -36,6 +36,10 @@
     opacity: 0.3;
   }
 
+  &--element-decore {
+    display: none;
+  }
+
   @include tablet() {
     margin-right: 68px;
     margin-bottom: 12px;
@@ -43,6 +47,14 @@
 
   @include desktop() {
     margin-right: 230px;
+
+    &--glasses {
+      display: none;
+    }
+
+    &--element-decore {
+      display: inline;
+    }
   }
 }
 
