--- a/source/sass/blocks/photo-editor.scss
+++ b/source/sass/blocks/photo-editor.scss
@@ -14,6 +14,8 @@
   @include tablet() {
     display: flex;
     justify-content: space-between;
+    padding-top: 57px;
+    padding-bottom: 47px;
   }
 
   @include desktop() {
@@ -35,7 +37,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    flex-basis: 300px;
+    flex-basis: 289px;
     padding: 0;
   }
 
@@ -51,12 +53,15 @@
   @include tablet() {
     padding: 0;
   }
+}
 
+.photo-editor__label {
   &::after {
     content: "";
 
     position: absolute;
     right: -20px;
+    bottom: -34px;
     left: -20px;
 
     width: auto;
@@ -65,31 +70,18 @@
     background-color: rgba($blue, 0.1%);
 
     @include tablet() {
-      display: none;
+      right: 0;
+      bottom: -16px;
+      left: 15px;
     }
   }
-}
 
-.photo-editor__label {
   @include tablet() {
     position: relative;
 
     display: flex;
     align-items: center;
-
-    &::after {
-      content: "";
-
-      position: absolute;
-      right: 0;
-      bottom: 0;
-      left: 0;
-
-      width: auto;
-      height: 1px;
-
-      background-color: rgba($blue, 0.1%);
-    }
+    margin-bottom: 31px;
   }
 }
 
@@ -132,8 +124,9 @@
     fill: $photo-editor-icon-active-color;
 
     @include tablet() {
-      width: 24px;
+      width: 25px;
       height: 22px;
+      padding-top: 7px;
     }
 
     @include desktop() {
@@ -146,6 +139,8 @@
     @include tablet() {
       width: 24px;
       height: 22px;
+      padding-top: 12px;
+      padding-left: 3px;
 
       fill: $photo-editor-icon-active-color;
     }
@@ -160,6 +155,8 @@
     @include tablet() {
       width: 17px;
       height: 17px;
+      padding-top: 6px;
+      padding-left: 7px;
 
       fill: $photo-editor-icon-active-color;
     }
