--- a/source/sass/blocks/photo-editor.scss
+++ b/source/sass/blocks/photo-editor.scss
@@ -27,6 +27,7 @@
 .photo-editor__source-photo {
   @include tablet() {
     flex-basis: 300px;
+    height: 400px;
   }
 }
 
@@ -171,4 +172,6 @@
 .photo-editor__buttons {
   margin: 0;
   padding-top: 40px;
+
+  text-align: center;
 }
