--- a/source/sass/blocks/post.scss
+++ b/source/sass/blocks/post.scss
@@ -42,9 +42,13 @@
   width: 100%;
   height: auto;
 
-  @include tablet() {
-    &--panorama {
+  &--panorama {
+    @include tablet() {
       height: 509px;
+    }
+
+    @include desktop() {
+      height: 506px;
     }
   }
 }
@@ -70,6 +74,11 @@
       min-height: 80px;
       margin-bottom: 30px;
       padding: 24px 28px 15px 28px;
+    }
+
+    @include desktop() {
+      min-height: 55px;
+      padding: 24px 31px 15px 28px;
     }
   }
 }
