--- a/source/sass/blocks/photo-content.scss
+++ b/source/sass/blocks/photo-content.scss
@@ -14,6 +14,10 @@
   @include tablet() {
     flex-basis: 300px;
   }
+
+  @include desktop() {
+    margin-bottom: 53px;
+  }
 }
 
 .photo-content__item-panorama {
