Корректирует тень модальных окон

--- a/source/sass/blocks/modal.scss
+++ b/source/sass/blocks/modal.scss
@@ -6,7 +6,7 @@
 
   background-color: $white;
 
-  box-shadow: 0 6px 17px 4px $darkgray;
+  box-shadow: 0 6px 13px 2px #757575;
 
   @include tablet() {
     top: 9%;
