--- a/source/sass/blocks/main-nav.scss
+++ b/source/sass/blocks/main-nav.scss
@@ -7,11 +7,11 @@
 .main-nav__wrapper {
   @include laptop-min() {
     display: flex;
-    align-items: center;
+    align-items: flex-start;
     width: 940px;
     margin: 0 auto;
     padding-top: 26px;
-    padding-bottom: 42px;
+    padding-bottom: 35px;
   }
 }
 
