--- a/source/sass/blocks/menu-list.scss
+++ b/source/sass/blocks/menu-list.scss
@@ -10,7 +10,7 @@
     justify-content: space-between;
     flex-wrap: wrap;
     width: 621px;
-    padding-top: 15px;
+    padding-top: 18px;
 
     border: none;
   }
@@ -46,23 +46,10 @@
     text-transform: none;
     letter-spacing: 0.1px;
 
-    // вложенность больше двух, как можно реализовать иначе?
-
     &--active {
-      position: relative;
+      padding-bottom: 10px;
 
-      &::after {
-        content: "";
-
-        position: absolute;
-        bottom: -10px;
-        right: 0;
-        left: 0;
-
-        height: 2px;
-
-        background-color: $white;
-      }
+      border-bottom: 2px solid $white;
     }
   }
 }
