Проверяет и корректирует css в соответствии со стайлгайдом Академии

--- a/source/sass/blocks/copyright.scss
+++ b/source/sass/blocks/copyright.scss
@@ -19,6 +19,8 @@
 .copyright__icon {
   fill: $copyright-icon-fill;
 
+  transition: 0.3s;
+
   &:hover,
   &:focus {
     fill: $copyright-icon-fill-hover;
