--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -28,6 +28,8 @@
 .footer__logo {
   fill: $logo-footer-color;
 
+  transition: 0.3s;
+
   &:hover,
   &:focus {
     fill: $logo-footer-action-color;
