--- a/source/sass/blocks/scale.scss
+++ b/source/sass/blocks/scale.scss
@@ -35,11 +35,15 @@
 .scale__toggle {
   position: absolute;
   top: -7px;
+
   width: 11px;
   height: 11px;
+
   background-color: $white;
   border: 2px solid $pink;
   border-radius: 50%;
+
+  transition: 0.2s;
 
   cursor: pointer;
 
