--- a/source/sass/blocks/social-list.scss
+++ b/source/sass/blocks/social-list.scss
@@ -3,6 +3,8 @@
   justify-content: center;
   align-items: center;
 
+  transition: 0.3s;
+
   @include circle(46px, transparent);
 
   border: 3px solid rgba($social-border-color, 0.1%);
