--- a/source/sass/blocks/map.scss
+++ b/source/sass/blocks/map.scss
@@ -22,7 +22,7 @@
     width: 100%;
     height: 33px;
 
-    background-image: url("../img/bg-triangle-white.svg");
+    background-image: url("../img/svg/bg-triangle-white.svg");
     background-position: 0 0;
     background-repeat: no-repeat;
     background-size: 100% 33px;
