--- a/source/sass/blocks/map.scss
+++ b/source/sass/blocks/map.scss
@@ -45,7 +45,15 @@
   position: absolute;
 
   width: 100%;
-  height: 500px;
+  height: 260px;
+
+  @include tablet() {
+    height: 460px;
+  }
+
+  @include desktop() {
+    height: 597px;
+  }
 }
 
 .map__img {
